# multiboot2-binary-rust

./: .gitignore  .run_qemu.sh  Cargo.toml  Makefile  README.md  build.sh  linker.ld  multiboot2_header.asm  run_qemu.sh  start.asm  x86-none-bare_metal-multiboot2.json
qemu/: .gitignore  grub.cfg
src/: cargo-workspace-info.md  linker.ld  main.rs  multiboot2_header.asm  start.asm
src/kernel-bin/: Makefile  link.ld  rust-toolchain.toml
src/kernel-bin/.cargo/: config.toml
src/kernel-bin/src/: error.rs  main.rs  uefi_gop_fb.rs
src/kernel-bin/src/asm/: boot_stack.S  debugcon.S  known_registers.S  macros.S  mb2_header.S  mb2_start.S  mod.rs  qemu_debugcon.S  start.S  static_memory.S  strings.S
src/kernel-bin/src/logger/: fb_logger.rs  qemu_debugcon.rs  serial.rs
src/kernel-bin/test/: check_kernel_elf.sh  expected_readelf.txt
src/kernel-lib/: Makefile  rust-toolchain.toml
src/kernel-lib/.cargo/: config.toml
src/kernel-lib/src/: rwlock.rs
src/rust/: build.sh
src/rust/kernel-bin/: Cargo.toml  link.ld  rust-toolchain.toml  x86_64-none-bare_metal.json
src/rust/kernel-bin/.cargo/: config.toml
src/rust/kernel-bin/src/: f32_compat.rs  kernelalloc.rs  kernelheap.rs  main.rs  multiboot2_header.S  panic.rs  start.S  uefi_gop_fb.rs
src/rust/kernel-bin/src/kernelheap/: chunk.rs  global_static_alloc.rs  mod.rs
src/rust/kernel-bin/src/logger/: fb_logger.rs  mod.rs  serial.rs
src/rust/kernel-bin/src/mem/: mod.rs
src/rust/kernel-bin/src/sysinfo/: mod.rs
src/rust/kernel-lib/: Cargo.toml  rust-toolchain.toml
src/rust/kernel-lib/.cargo/: config.toml
src/rust/kernel-lib/src/: fakelock.rs  lib.rs  mutex.rs  rwlock.rs
src/rust/kernel-lib/src/kernelheap/: chunk_allocator.rs  global_static_allocator.rs  mod.rs
src/rust/rust-32-bit/: Cargo.toml  rust-toolchain.toml  x86-none-bare_metal-multiboot2.json
src/rust/rust-32-bit/.cargo/: config.toml
src/rust/rust-32-bit/src/: main.rs
src/rust/rust-64-bit/: Cargo.toml  link.ld  x86_64-none-bare_metal.json
src/rust/rust-64-bit/.cargo/: config.toml
src/rust/rust-64-bit/src/: boot_stage.rs  error.rs  kernelalloc.rs  lib.rs  main.rs  multiboot2_header.S  qemu_debug.rs  start.S  xuefi.rs
src/rust/rust-kernel/: Cargo.toml  rust-toolchain.toml
src/rust/rust-kernel/src/: boot_stage.rs  error.rs  kernelalloc.rs  logger.rs  main.rs  mb2.rs  multiboot2_header.S  panic.rs  qemu_debug.rs  start.S  xuefi.rs
src/rust/rust-kernel/src/sysinfo/: mod.rs
src/rust/rust-utils/: Cargo.toml
src/rust/rust-utils/src/: convert.rs  lib.rs  mutex.rs
