[package]
name = "rust-multiboot-binary"
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
multiboot2 = "0.10.1"
x86 = "0.39.0"
# x86_64 = "0.14.3"
uefi = "0.9.0"
