[package]
name = "kernel-bin"
description = """
A kernel binary that can be loaded as Multiboot2 payload by GRUB.
It works on x86_64 platforms with UEFI as firmware.
"""
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# accelerates code startup by noticable amount
opt-level = 1

[dependencies]
x86 = "0.44.0"
# uefi = { version = "0.13.0", features = ["logger"] }
# uefi = { features = ["logger"], git = "https://github.com/phip1611/uefi-rs.git", rev = "6ba5feb10a69f9ba9a443b71d6d37932c1410a51" }
uefi = { features = ["logger"], path = "../../../../uefi-rs" }
log = "0.4.14"
x86_64 = "0.14.7"
multiboot2 = "0.13.1"
# multiboot2 = { path = "../../../../multiboot2-rs/multiboot2" }
kernel-lib = { path = "../kernel-lib" }
# useage as arrays but on stack; required to use core::fmt conveniently
arrayvec = { version = "0.7.2", default-features = false }
# derive Display, which will make printing of enum variants convenient
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
runs_inside_qemu = "1.2.1"
uart_16550 = "0.2.16"
noto-sans-mono-bitmap = "0.1.5"