[package]
name = "rust-multiboot2-binary-32-bit-code"
description = """
Currently unused but kept for future use:

Defines any symbols that represent an 32-bit entry into Rust.
All (used) symbols will be transferred into the final ELF.
"""
version = "0.1.0"
authors = ["Philipp Schuster <philipp.schuster@cyberus-technology.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
x86 = "0.39.0"
# uefi = "0.11.0"
# multiboot2 = "0.10.1"
# x86_64 = "0.14.3"
